--- a/tools/tr2/config/TR2X_ConfigTool/Resources/Lang/en.json
+++ b/tools/tr2/config/TR2X_ConfigTool/Resources/Lang/en.json
@@ -22,6 +22,10 @@
       "Title": "3D pickups",
       "Description": "Enables 3D models to be rendered in place of the sprites for pickup items."
     },
+    "enable_mesh_tint": {
+      "Title": "Responsive underwater mesh tint",
+      "Description": "Enables underwater tints to be drawn on Lara's meshes based on water height per mesh."
+    },
     "enable_cheats": {
       "Title": "Cheats",
       "Description": "Enables various cheats:\n- L: immediately end the level.\n- I: give Lara all weapons; a boost of ammo and medipacks; and all plot items for the current level.\n- O: enable DOZY cheat (swimming midair).\n     - WALK key: exit DOZY.\n     - GUN key: open the closest door (doesn't work in certain places)."
